--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Lucas Winand Osete - Portfolio</title>
 	</head>
 	<body>
 		<slot />
@@ -19,5 +19,11 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: var(--bg);
+		color: var(--text);
+	}
+
+	.soft {
+		color: var(--text-soft);
 	}
 </style>
