Started project section

--- a/src/components/cards/StackCard.astro
+++ b/src/components/cards/StackCard.astro
@@ -1,4 +1,4 @@
-<section class="experience__stack">
+<section class="stack__card">
 	<h4>Stack:</h4>
 	<div class="stack__list">
 		<slot />
@@ -6,16 +6,16 @@
 </section>
 
 <style>
-	.experience__stack {
+	.stack__card {
 		margin-top: 20px;
 	}
 
 	.stack__list {
-		margin-top: 12px;
+		margin-top: 8px;
 		display: flex;
 		flex-wrap: wrap;
 		flex-direction: row;
 		justify-content: start;
-		gap: 12px;
+		gap: 8px;
 	}
 </style>
