--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,8 +19,11 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
-		background-color: var(--bg);
 		color: var(--text);
+	}
+
+	body {
+		background-color: var(--bg);
 	}
 
 	.soft {
